--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
     <link rel="stylesheet" href="styles/grid.css" />
     <link rel="stylesheet" href="styles/app.css" />
     <link rel="stylesheet" href="styles/responsive.css" />
+    <svg xmlns="http://www.w3.org/2000/svg" style="display: none">
+      <symbol id="github-icon" viewBox="0 0 16 16">
+        <path
+          fill="currentColor"
+          d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z"
+        />
+      </symbol>
+    </svg>
   </head>
   <body>
     <header class="header">
@@ -741,8 +749,32 @@
           </div>
         </div>
         <div class="footer__Copy-wrapper">
-        <p class="footer__copy-right">© 2020. All rights reserved.</p>
-        <p class="footer__dev-info">Developer by: Ali Bakhshi</p>
+          <p class="footer__copy-right">© 2020. All rights reserved.</p>
+          <div class="dev-container">
+            Developed by :
+            <div class="dev-link">
+              <a
+                href="https://github.com/Devby-Ali"
+                target="_blank"
+                class="github-link"
+              >
+                Devby-Ali
+              </a>
+              <svg class="github__icon" fill="currentColor">
+                <use xlink:href="#github-icon" />
+              </svg>
+            </div>
+            <div class="dev-info">
+              <div class="dev-image">
+                <img
+                  src="images/DevbyAli.jpg"
+                  alt="Ali Bakhshi"
+                  style="width: 100%; height: 100%; object-fit: cover"
+                />
+              </div>
+              <span class="dev-text"> Ali Bakhshi | Front-end React </span>
+            </div>
+          </div>
         </div>
       </div>
     </footer>
